--- a/roles/brother-printer/tasks/main.yml
+++ b/roles/brother-printer/tasks/main.yml
@@ -7,13 +7,13 @@
     - libp11-kit-gnome-keyring
 
 - name: wget lpr printer driver
-  get_url: url=http://download.brother.com/welcome/dlf005511/brdcp7030lpr-2.0.2-1.i386.deb dest=brdcp7030lpr-2.0.2-1.i386.deb mode=0777
+  get_url: url=http://www.brother.com/pub/bsc/linux/dlf/brdcp7030lpr-2.0.2-1.i386.deb dest=/root/brdcp7030lpr-2.0.2-1.i386.deb mode=0777
 
 - name: install lpr printer driver
   command: dpkg -i /root/brdcp7030lpr-2.0.2-1.i386.deb creates=/usr/bin/brprintconfiglpr2
 
 - name: wget cups printer driver
-  get_url: url=http://download.brother.com/welcome/dlf005513/cupswrapperDCP7030-2.0.2-1.i386.deb dest=/root/cupswrapperDCP7030-2.0.2-1.i386.deb mode=0777
+  get_url: url=http://www.brother.com/pub/bsc/linux/dlf/cupswrapperDCP7030-2.0.2-1.i386.deb dest=/root/cupswrapperDCP7030-2.0.2-1.i386.deb mode=0777
 
 - name: install cups printer driver
   command: dpkg -i /root/cupswrapperDCP7030-2.0.2-1.i386.deb creates=/usr/local/Brother/cupswrapper/brcupsconfig3
