--- a/playbook.yml
+++ b/playbook.yml
@@ -17,9 +17,9 @@
   roles:
     - systemd
     - cups
+    - energy-saving
     # - backup
     # - plex
     # - brother-scanner
-    # - brother-printer
     # - mounting
     # - energy-saving
